Filters added with exception handling

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,7 +8,7 @@ spring.mvc.log-request-details=true
 
 
 #DB config
-spring.datasource.url=jdbc:postgresql://db:5432/bank?currentSchema=core
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank?currentSchema=core
 spring.datasource.username=dev
 spring.datasource.password=dev
 spring.datasource.driver-class-name=org.postgresql.Driver
