--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.datasource.hikari.schema=core
 
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
